<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Copyright 2010 John R. Hicks

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, ChannelListActivity!</string>
    <string name="app_name">FeedDroid</string>
    <string name="no_posts">No posts to display.</string>
    <string name="no_results">No results.</string>
    <string name="feed_url">Feed URL:</string>
    <string name="feed_name">Feed name:</string>
    <string name="new_folder">New Folder</string>
    <string name="folder_name">Folder name:</string>
    <string name="in_folder">In Folder:</string>
    <string name="new_channel">New Channel</string>
    <string name="prev_channel">Previous Channel</string>
    <string name="next_channel">Next Channel</string>
    <string name="edit_channel">Edit Channel</string>
    <string name="move_channel">Move To Folder...</string>
    <string name="remove_channel">Delete...</string>
    <string name="next_post">Newer Post</string>
    <string name="prev_post">Older Post</string>
    <string name="view_post">View Post</string>
    <string name="view_posts">View Posts</string>
    <string name="btn_save">Save</string>
    <string name="btn_podcast_listen">Listen to Podcast</string>
    <string name="btn_podcast_download">Download Podcast</string>
    <string name="confirm_remove_channel">Are you sure you want to remove this channel?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="updates_available">RSS Feeds have been updated.</string>
    <string name="post_show">Show: </string>
    <string name="all">All</string>
    <string name="unread">Unread</string>
    <string name="starred">Starred</string>
    <string name="star_this">Star This!</string>
    <string name="mark_all_read">Mark All As Read</string>
    <string name="auto_update">Automatically Update Feeds</string>
    <string name="update_freq">Update Frequency</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prefs">Preferences</string>
    <string name="prefs_label">FeedDroid Preferences</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Enter Search Terms Here</string>
    <string name="search_results">Search results for \'<xliff:g id="string">%s</xliff:g>\': </string>
    <string name="import_options">Import Options:</string>
    <string name="greader_import">Import Google Reader Feeds</string>
    <string name="import_notice">IMPORTANT: This feature requires your feeds to be contained in a 
    	file named feeds.xml on the root of your SD card.  To export your Google Reader feeds, go to the 
    	Reader Preferences and click on the Import/Export tab.
    </string>
    <string name="empty_folder">Folder is empty.</string>
    <string name="move_choose_folder">Choose folder you wish to move this item to</string>
    <string name="podcast_file_error">Unable to play podcast file.</string>
    <string-array name="update_freq_options">
		<item>Every Minute</item>
		<item>Every 15 Minutes</item>
		<item>Every 30 Minutes</item>
		<item>Every 45 Minutes</item>
		<item>Every Hour</item>
		<item>Every 90 Minutes</item>
		<item>Every Two Hours</item>
	</string-array>
    
</resources>
