<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Copyright 2010 John R. Hicks

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				
				<CheckBox android:id="@+id/chk_auto_update"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
				
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/auto_update"
					android:gravity="center_vertical"/>
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingTop="15dip">
				
				<TextView android:id="@+id/txt_freq"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/update_freq"/>
				
				<Spinner android:id="@+id/frequency"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:prompt="@string/update_freq"
					android:entries="@array/update_freq_options" />
			</LinearLayout>
			
			<LinearLayout
				android:orientation="vertical"
				android:paddingTop="5dip"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
			
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/import_options"/>
					
				<Button android:id="@+id/btn_greader_import"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/greader_import"/>	
					
				<TextView 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/import_notice"
					android:textSize="12dip"/>
					
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="bottom"
				android:paddingTop="25dip">
					
					<Button android:id="@+id/btn_ok"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/ok"/>
						
					<Button android:id="@+id/btn_cancel"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/cancel"/>
		</LinearLayout>	
		
		</LinearLayout>
	</ScrollView>
</LinearLayout>
