<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Copyright 2010 John R. Hicks

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
 <LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  	xmlns:feeddroid="http://schemas.android.com/apk/res/com.determinato.feeddroid"
	  android:orientation="vertical"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent">

	
	  
	 <view class="com.determinato.feeddroid.view.ChannelHeader" android:id="@+id/postListHead"
     	android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

	<ListView android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"/>

	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:paddingRight="6dip"
			android:text="@string/post_show"/>
		<RadioGroup
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<RadioButton android:id="@+id/show_all"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/all"/>	
			<RadioButton android:id="@+id/show_unread"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/unread"
				android:checked="true"/>
			<RadioButton android:id="@+id/show_starred"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/starred"/>
		</RadioGroup>
		
			
	</LinearLayout>
	<com.google.ads.GoogleAdView
		android:id="@+id/adview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

</LinearLayout>
